fix: broken style (???)

--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -73,10 +73,6 @@
 	outline: 3px solid #ffffff7c;
 }
 
-#hero img, #hero video {
-	filter: invert(100%);
-	transition: filter .2s var(--ease);
-}
 #hero.heroShow img, #hero.heroShow video, #hero:not(.invertColors) img, #hero:not(.invertColors) video { filter: invert(0%); }
 #hero span span {
 	border-radius: 0 0.5rem 0 0;
